--- a/ai-backend/pyproject.toml
+++ b/ai-backend/pyproject.toml
@@ -13,6 +13,7 @@ langchain = "^0.2.1"
 langchain-groq = "^0.1.4"
 deepgram-sdk = "^3.2.7"
 pyaudio = "^0.2.14"
+prettytable = "^3.10.0"
 
 
 [build-system]
